Add py312 support and release GH action

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.18.0
-envlist = py{38,39,310,311}
+envlist = py{38,39,310,311,312}
 skip_missing_interpreters = true
 
 [gh-actions]
@@ -9,6 +9,7 @@ python =
     3.9: py39
     3.10: py310
     3.11: py311
+    3.12: py312
 
 # Unit test and code coverage target
 [testenv]
@@ -43,6 +44,15 @@ allowlist_externals = make
 commands =
     doc8 index.rst ../README.rst --extension .rst --ignore D001
     make html SPHINXOPTS="-W --keep-going"
+
+[testenv:publish]
+passenv = *
+skip_install = true
+deps =
+    -r requirements/requirements.txt
+    flit
+allowlist_externals = flit
+commands = flit publish --setup-py
 
 [pytest]
 addopts = -v
